k8s/apps/home-automation/home-assistant/patches.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  namespace: home-automation
spec:
  template:
    spec:
      containers:
        - name: codeserver
          volumeMounts:
            - name: deploykey
              mountPath: /home/coder/.ssh/id_rsa
              subPath: id_rsa
