k8s/apps/home-automation/home-assistant/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vscode-hass
  namespace: home-automation
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`vscode-hass.${SECRET_DOMAIN}`)
      middlewares:
        - name: authelia
          namespace: networking
      services:
        - name: home-assistant-codeserver
          port: 12321
  tls:
    certResolver: default
    domains:
      - main: "${SECRET_DOMAIN}"
