k8s/apps/home-automation/home-assistant/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: home-assistant
  namespace: home-automation
spec:
  hosts:
    - 'hass.${SECRET_DOMAIN}'
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - route:
        - destination:
            port:
              number: 8123
            host: home-assistant.home-automation.svc.cluster.local
          weight: 100
          headers:
            response:
              set:
                Referrer-Policy: no-referrer
                X-Content-Type-Options: nosniff
                X-DNS-Prefetch-Control: 'off'
                X-Download-Options: noopen
                X-Frame-Options: deny
                X-XSS-Protection: 1; mode=block

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: home-assistant-code
  namespace: home-automation
spec:
  hosts:
    - 'hass-code.${SECRET_DOMAIN}'
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - route:
        - destination:
            port:
              number: 12321
            host: home-assistant-codeserver.home-automation.svc.cluster.local
          weight: 100
          # headers:
          #   response:
          #     set:
          #       Referrer-Policy: no-referrer
          #       X-Content-Type-Options: nosniff
          #       X-DNS-Prefetch-Control: 'off'
          #       X-Download-Options: noopen
          #       X-Frame-Options: deny
          #       X-XSS-Protection: 1; mode=block
