k8s/apps/home-automation/home-assistant/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: home-assistant
  namespace: home-automation
  annotations:
    external-dns.alpha.kubernetes.io/target: '${SECRET_DOMAIN}'
spec:
  hosts:
    - 'hass.${SECRET_DOMAIN}'
  gateways:
    - istio-ingress/istio-ingressgateway
  http:
    - route:
        - destination:
            port:
              number: 8123
            host: home-assistant.home-automation.svc.cluster.local
          weight: 100
